--- a/SimpleRPG/SimpleRPG/SimpleRPG.csproj
+++ b/SimpleRPG/SimpleRPG/SimpleRPG.csproj
@@ -42,14 +42,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Dungeons\Dungeon.cs" />
+    <Compile Include="Battle.cs" />
+    <Compile Include="DungeonSetup.cs" />
+    <Compile Include="DungeonFlow.cs" />
+    <Compile Include="EndGame.cs" />
     <Compile Include="Game.cs" />
-    <Compile Include="Specifications\IDungeon.cs" />
-    <Compile Include="Specifications\IMonster.cs" />
-    <Compile Include="Specifications\IPlayer.cs" />
-    <Compile Include="Specifications\IStatistics.cs" />
+    <Compile Include="LevelManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpecBox.cs" />
+    <Compile Include="StatsPage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
